// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Badge FurtherUsage renders 1`] = `
<Fragment>
  <h2
    id="further-usage"
  >
    Further usage
  </h2>
  <p>
    Badges inherit the size of the immediate parent element.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <h1>
      Badge 
      <small
        className="badge badge-default"
      >
        default
      </small>
    </h1>
    <h2>
      Badge 
      <small
        className="badge badge-brand"
      >
        brand
      </small>
    </h2>
    <h3>
      Badge 
      <small
        className="badge badge-blue"
      >
        blue
      </small>
    </h3>
    <h4>
      Badge 
      <small
        className="badge badge-purple"
      >
        purple
      </small>
    </h4>
    <h5>
      Badge 
      <small
        className="badge badge-yellow"
      >
        yellow
      </small>
    </h5>
    <h6>
      Badge 
      <small
        className="badge badge-red"
      >
        red
      </small>
    </h6>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Badge Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Use class 
    <Property
      value=".badge"
    />
     along with 
    <Property
      value=".badge-{color}"
    />
     to display the badge of your choosing.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <p>
      Badge 
      <span
        className="badge badge-default"
      >
        default
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-brand"
      >
        brand
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-blue"
      >
        blue
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-purple"
      >
        purple
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-yellow"
      >
        yellow
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-red"
      >
        red
      </span>
    </p>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Badge renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Badge...
  </p>
  <Overview />
  <FurtherUsage />
</DocContainer>
`;
